--- a/solegoes_app/pubspec.yaml
+++ b/solegoes_app/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.1
   cloud_firestore: ^6.1.1
+  razorpay_flutter: ^1.3.7
+  share_plus: ^10.1.4
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
