feat: Add payment cancellation snackbar and ignore log files
Payment Error Handling:
- Added snackbar for payment cancellation with consistent styling
- Shows 'Payment cancelled' message for 2 seconds
- Uses floating snackbar behavior
- Prevents creating pending bookings on user cancellation

Gitignore:
- Added flutter_log.txt and flutter_log.txt~ to gitignore
- Prevents log files from being committed to repository

--- a/solegoes_app/.gitignore
+++ b/solegoes_app/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Flutter log files
+flutter_log.txt
+flutter_log.txt~
+*.log.txt
