--- a/solegoes_app/pubspec.yaml
+++ b/solegoes_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.1
   cloud_firestore: ^6.1.1
+  firebase_database: ^12.1.1
   razorpay_flutter: ^1.3.7
   share_plus: ^10.1.4
   pdf: ^3.11.3
