--- a/solegoes_app/pubspec.yaml
+++ b/solegoes_app/pubspec.yaml
@@ -71,6 +71,8 @@ dev_dependencies:
   build_runner: ^2.7.1
   freezed: ^3.2.3
   json_serializable: ^6.11.2
+  flutter_launcher_icons: ^0.14.4
+  image: ^4.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -84,7 +86,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/logo.png
+    - assets/images/logo_full.png
+    - assets/images/logo_symbol.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -115,7 +118,7 @@ flutter:
 # Native splash screen configuration
 flutter_native_splash:
   color: "#09090B"
-  image: assets/images/logo.png
+  image: assets/images/logo_foreground.png
   android_12:
     color: "#09090B"
-    image: assets/images/logo.png
+    image: assets/images/logo_foreground.png
